<resources>
    <string name="app_name">Stormy</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="error_title">Oops, sorry!</string>
    <string name="error_message">There was an error. Please try again.</string>
    <string name="error_button">OK</string>
    <string name="error_toast_no_network">Network is unavailable.</string>
    <string name="humidity_label">HUMIDITY</string>
    <string name="sevenDay">7-DAY</string>
    <string name="hourly">HOURLY</string>
    <string name="gettingCurrentWeather">Getting current weather...</string>
    <string name="blankDegrees">--</string>
    <string name="precipitationChance">RAIN/SNOW?</string>
    <string name="gettinglocation">Getting location...</string>
    <string name="ellipsis">...</string>
    <string name="title_activity_daily_forecast">DailyForecastActivity</string>
    <string name="noDailyForecastData">There is no data to display</string>
    <string name="title_activity_hourly_forecast">title_activity_hourly_forecast</string>
    <string name="this_weeks_weather">This Week\'s Weather</string>
</resources>
